--- a/GameData/Knes/Resources/ScienceDefs.cfg
+++ b/GameData/Knes/Resources/ScienceDefs.cfg
@@ -48,8 +48,169 @@
 
 
 
+EXPERIMENT_DEFINITION
+{
+	id = Color Samples
+	title = Color Samples
+	baseValue = 12
+	scienceCap = 18
+	dataScale = 2
+	requireAtmosphere = False
+	situationMask = 63
+	biomeMask = 7
+	RESULTS
+	{
+		default = The red color seems the most resistant, but the yellow is the most stylized.
+		KerbinInSpaceHigh = However, what's strange is the color.
+		KerbinInSpaceLow = The color indicator surface provides a convenient and easily accessible color reference.
+		MunInSpace = Each color has its own strange power.
+		EveInSpace = The polymers synthesized up to date mainly absorb blue and red colors in the reduced state.
+		MinmusInSpace = Yes, it is nice, but I do not like the red color very much.
+		DunaInSpace = It looks like the color I had on when I woke up after Homecoming.
+		DunaSrfLanded = They sold 50,000 in that color last year.
+		MinmusSrfLanded = You can't get this color above ground.
+		MunSrfLanded = I really like that color.
 
+	}
+}
+EXPERIMENT_DEFINITION
+{
+	id = ScienceRackBioExperiment
+	title = Science Rack Bio
+	baseValue = 20
+	scienceCap = 20
+	dataScale = 2
+	
+	requireAtmosphere = False
+	situationMask = 63
+	biomeMask = 7
 
+	RESULTS
+	{
+		default = Well, you know... science takes time.
+
+		KerbinSrfSplashed = The interface includes a bubbler member that is fluidically wetted with a fluid via capillary action.
+		KerbinSrfLandedLaunchpad = Kraken is not a perfect creature.
+		KerbinSrfLandedRunway = The results promise to be quite instructive and will definitely move things further along.
+		KerbinSrfLandedKSC = Unfortunately, the results of this are clear to see.
+		KerbinFlyingLowGrasslands = Every semester, that experiment fails.
+		KerbinFlyingLowGrasslands = Test results linked to this entry, saved on 6 redundant drives.
+		KerbinFlyingLowHighlands = These results are off the charts, Bob.
+		KerbinFlyingLowMountains = The results obtained from the experiment show that in situ treatment at landfills using this approach is viable.
+		KerbinFlyingLowDeserts = Biopersistence studies show that those products were not soluble and that the fibres remained within the kraken body.
+		KerbinFlyingLowBadlands = Experiments show that this is indeed the observed behaviour.
+		KerbinFlyingLowTundra = My experiment happened exactly the way I predicted it.
+		KerbinFlyingLowIceCaps = It was only a matter of time before some idiot's experiment failed miserably and I found a pathway home.
+		KerbinFlyingLowShores = Experiment result in most interesting discovery.
+		KerbinFlyingLowWater = The test results were appalling and frightening.
+		KerbinInSpaceHigh = Are you 100% sure you have a Biology licence?
+		KerbinInSpaceLow = This result! It was abstract art turned into biology.
+		KerbinFlying = Kraken is terrible! It is just a fact of biology.
+
+		SunInSpaceHigh = Bob is convinced that the experiment shows serious health risks including the possibility of injury and even the death.
+		MunInSpace = We found after three years that the results are quite encouraging.
+		MinmusInSpace = The experiments show that they display favorable full or ischemic anti-apoplexy activity, nerve protective activity and low side effects.
+		GillyInSpace = After a few days, the experiment failed: the setup broke down.
+		MohoInSpace = The experiments described herein show that it is also possible to assemble chimeric KLPs of an KPV including a fusion partner and that tumor protection can be induced.
+		EveInSpace = These results show that kraken are extremely sensitive to handling.
+		DunaInSpace = If the experiment didn't fail, this creature could be dangerous.
+		IkeInSpace = The experiments show that the viruses react quickly with the particles and that bonding is not permanent.
+		DresInSpace = Results of experiments indicate that the free Karbonyl form is the operative substrate.
+		JoolInSpace = The experiment results suggest that the Kerylaminoethyl acetylsalicylate diffuses through Kraken skin 400 times faster than kerbylsalicylic acid itself and 100 times faster than Kethyl acetylsalicylate.
+		LaytheInSpace = The results of this study are currently being evaluated.
+		VallInSpace = The results are in fair agreement with the experimental data.
+		TyloInSpace = What is the protocol in the event your experiment fails?
+		BopInSpace = The results are so embarrassing that the scientist refuse all comment.
+		PolInSpace = However, the results are currently far from being sufficient.
+		EelooInSpace = If it's true, it doesn't matter, if the experiment fails.
+		
+		MunSrfLanded = I am told that you should also press the button.
+		MinmusSrfLanded = So now, you should shift to the passive technique.
+		GillySrfLanded = The K-SCID experiment shows that where the gene lands in a cell's genome may be just as important to the health of the person undergoing gene transfer.
+		MohoSrfLanded = These experiments show that the principal product, K2H4, arises from a concerted molecular elimination, as do most of the KH4 and KH3KHO.
+		EveSrfLanded = The results shall be transmitted according to the data files shown in Annex I.
+		DunaSrfLanded = I wanted you to have a look at this specimen here.
+		IkeSrfLanded = The three latter experiments also show the presence of dipoles associated with the KrO42- ions.
+		DresSrfLanded = The results are irreversible and can be multi-generational.
+		JoolSrfLanded = I finished the Kraken autopsy and the results were a little strange.
+		LaytheSrfLanded = The results are consistent with an anti conformation for K-thiouridine in an aqueous solution.
+		VallSrfLanded = Test results shall be evaluated to determine sample friction behaviour.
+		TyloSrfLanded = There are also some interesting results in terms of changing dynamics.
+		BopSrfLanded = I believe the results are obvious.
+		PolSrfLanded = And the results are far from ordinary.
+		EelooSrfLanded = The results are positive for the opiate Kromorphone.
+
+	}
+}
+
+EXPERIMENT_DEFINITION
+{
+	id = ScienceRackExperiment
+	title = Science Rack Experiment
+	baseValue = 20
+	scienceCap = 20
+	dataScale = 2
+	
+	requireAtmosphere = False
+	situationMask = 63
+	biomeMask = 7
+
+	RESULTS
+	{
+		default = You perform a series of Physiology observations.
+
+		KerbinSrfSplashed = Just a little wet, okay? That's all.
+		KerbinSrfLandedLaunchpad = I'm going to analyze the experimental results, and write a report.
+		KerbinSrfLandedRunway = Other substances could be used to make plastic more malleable.
+		KerbinSrfLandedKSC = Such metadata could be used as a basis for possible benchmarking.
+		KerbinFlyingLowGrasslands = The substance can only be assigned to K 409 if there is no explosive behaviour and hence KP181 is also superfluous.
+		KerbinFlyingLowHighlands = The rate of decomposition increases with temperature and varies with the substance.
+		KerbinFlyingLowMountains = This is the hardest substance known to our science.
+		KerbinFlyingLowDeserts = The test substance is added in low concentrations to a nutrient solution containing aerobic bacteria.
+		KerbinFlyingLowBadlands = That white substance is anti-plaxomillar Kheranol.
+		KerbinFlyingLowTundra = We were disappointed with the results of the experiment.
+		KerbinFlyingLowIceCaps = Keryllium nitrate is a substance of Class 5
+		KerbinFlyingLowShores = The substance under test is filled into the tube in three equal increments.
+		KerbinFlyingLowWater = If explosion or ignition occurs then the substance is too thermally unstable for transport.
+		KerbinInSpaceHigh = Yes, I'm afraid you will never develop tentacles.
+		KerbinInSpaceLow = You're happy, it's an involuntary reflex in your physiology.
+		KerbinFlying = Are you happy with what you're doing?
+
+		SunInSpaceHigh = Our results implicated that Karaginase could be used as a candidate for anti-KCV drug development.		
+		MunInSpace = There are conflicting reports concerning the irritant nature of this substance.
+		MinmusInSpace = This substance is toxic by inhalation.
+		GillyInSpace = We think it is particularly regrettable that the instrument of regulation was opted for.
+		MohoInSpace = Formulations of this substance containing not less than 30% non-volatile, non-flammable phlegmatizer are not subject to the requirements of KDR.
+		EveInSpace = The instrument should not prescribe to this level of detail.
+		DunaInSpace = This test will be performed on any electronic device with a sleep mode or capable of displaying non conventional messages.
+		IkeInSpace = The phlegmatized substance shall be significantly less sensitive than dry KETN.
+		DresInSpace = The substance shall be examined in two tests.
+		JoolInSpace = Another factor in increasing research costs is advanced scientific instrumentation.
+		LaytheInSpace = When established, the module will serve as a scientific tool for measuring the Kraken
+		VallInSpace = Krellium-K is a highly valued substance.
+		TyloInSpace = The substance comprising a branched polymer which supports the biomimetic material internally.
+		BopInSpace = The substance shall be covered by an inert gas.
+		PolInSpace = C'est incroyable cette matière, mieux que de la soie
+		EelooInSpace = The results of the experiment were not as we had hoped.
+		
+		MunSrfLanded = Bill, don't touch that.
+		MinmusSrfLanded = New data and ongoing monitoring would be required to assess this result.
+		GillySrfLanded = It is possible that Kitinase inhibitors could be used as antifungal agents.
+		MohoSrfLanded = Today, this module is considered as one of the most powerful scientific instruments ever invented.
+		EveSrfLanded = This substance is not subject to the requirements of KDR when coated.
+		DunaSrfLanded = So you might want to reserve judgment.
+		IkeSrfLanded = Listen, Jeb, don't start on that until I get over there.
+		DresSrfLanded = No one is touching this button!
+		JoolSrfLanded = Every scientific instrument confirms the Kraken was out of contact for only a fraction of a second.
+		LaytheSrfLanded = The substance was absorbed rapidly and distributed into all tissues.
+		VallSrfLanded = The instrument of chaos must be destroyed.
+		TyloSrfLanded = For solids, when another substance is used, it must have the same physical characteristics as the substance to be carried.
+		BopSrfLanded = The tool for making such an assessment would be the indicators of achievement.
+		PolSrfLanded = Any diluent shall be compatible with the self-reactive substance.
+		EelooSrfLanded = This could be used to improve your supply chain and procurement process.
+		
+	}
+}
 EXPERIMENT_DEFINITION
 {	
 	id = CosmoCat
