--- a/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_A.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_A.cfg
@@ -23,7 +23,7 @@ PART
 	subcategory = 0
 	title = ATV "Bottlaender" Front RCS
 	manufacturer = Knes
-	description = The recent discovery of a third law of physics made it possible for Luciole Space Systems Corps engineers to produce these small monopropellant thrusters, to help with attitude control and linear motion. Even though many Kerbal physicists still dispute the validity of this new law, studies show that the thrusters seem to work as advertised.
+	description = The recent discovery of a third law of physics made it possible for Snekma Corps engineers to produce these small monopropellant thrusters, to help with attitude control and linear motion. Even though many Kerbal physicists still dispute the validity of this new law, studies show that the thrusters seem to work as advertised.
 	attachRules = 0,1,0,0,0
 	mass = 0.02
 	dragModelType = default
