--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_P120E.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_P120E.cfg
@@ -35,7 +35,7 @@ PART
 	sound_vent_soft = disengage
 	sound_explosion_low = flameout
 	
-	TechRequired = heavierRocketry
+	TechRequired = veryHeavyRocketry
 	entryCost = 15000
 	cost = 8500
 	category = Engine
