--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_Cargo_Tank.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_Cargo_Tank.cfg
@@ -31,9 +31,9 @@ PART
 	cost = 950
 	category = Propulsion
 	subcategory = 0
-	title = STEAM "Blamont" Pressurised Module
+	title = STEAM "Blamont" Monopropellant Module
 	manufacturer = Knes
-	description = ATV Pressurised Module can deliver dry cargo, water, compressed gases and propellant to a space station.
+	description = STEAM "Blamont" deliver monopropellant to a space station.
 	attachRules = 1,0,1,1,0
 	stackSymmetry = 1
 
