--- a/GameData/Knes/Parts/ATV/_Knes_ATV_SolarPanel.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_SolarPanel.cfg
@@ -23,7 +23,7 @@ PART
 	mass = 0.04
 	title = ATV "Einstein" Solar Panel
 	manufacturer = Knes
-	description = ATV Solar Panel
+	description = The ATV "Einstein" Solar Panel is similar in design to the SP series solar panels, but without the heavy casing.  Includes passive radiators on the reverse side for better heat dissipation.
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -50,7 +50,7 @@ PART
 		extendActionName = #autoLOC_6001805 //#autoLOC_6001805 = Extend <<1>>
 		retractActionName = #autoLOC_6001806 //#autoLOC_6001806 = Retract <<1>>
 		extendpanelsActionName = #autoLOC_6001807 //#autoLOC_6001807 = Toggle <<1>>	
-		chargeRate = 15.25
+		chargeRate = 8
 		powerCurve
 		{
 			key = 206000000000 0 0 0
