--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Antenna.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Antenna.cfg
@@ -26,7 +26,7 @@ PART
 	subcategory = 0
 	title = ATV "Leproux" Antenna
 	manufacturer = Knes
-	description = A powerful antenna for your spacecraft
+	description = A fully deployable communications and data transmission system. It has been designed to have a minimal form factor when stowed. Occasional antenna tweaking and swift kicks to the main assembly may be required for optimal performance.
 	
 	tags = Knes aerial antenna radio signal transmi srf ATV
 	
