--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Adapter.cfg
@@ -58,7 +58,7 @@ PART
 	subcategory = 0
 	title = ATV "Lemaitre" Nose Adapter
 	manufacturer = Knes
-	description = A modular structural adapter in various sizes.
+	description = A modular ProbeCore structural adapter in various sizes. This probe core provides advanced guidance assistance technology, and comes fitted with internal reaction wheels and decently-sized batteries. Despite concerns that one day, autonomous spacecraft cores could become self-aware and turn against their creators, or even become very stubborn against opening pod bay doors, Probodobodyne insists that these unmanned AI-driven devices are the way of the future.
 	attachRules = 1,0,1,1,0
 	stackSymmetry = 1
 	
