Creating TweakScale patches for * Knes Vega Avum Avionics 125 * Knes L3S P40

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Launcher_TweakScale.cfg
@@ -400,6 +400,15 @@
 	}
 }
 
+@PART[_Knes_Vega_Avum_Avionics_125]:NEEDS[TweakScale]:FOR[Knes] // S3 "Avroom" avionics
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 1.25
+	}
+}
+
 
 // ** L35 *
 
@@ -626,6 +635,16 @@
 	{
 		type = stack
 		defaultScale = 2.5
+	}
+}
+
+@PART[_Knes_L3S_P40]:NEEDS[TweakScale]:FOR[Knes] // P40 "Vespa" Booster
+{
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
 	}
 }
 
