--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_Gear.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_Gear.cfg
@@ -117,7 +117,7 @@
 		FitWheelColliderToMesh = False		
 		radius = 0.25
 		center = 0,0.0,0
-		mass = 0.040
+		mass = 0.080
 		groundHeightOffset = 1.72
 				
 		TooltipTitle = #autoLOC_502079 //#autoLOC_502079 = Retractable Landing Gear
@@ -128,12 +128,13 @@
 		name = ModuleWheelSuspension
 		baseModuleIndex = 0
 		suspensionTransformName = SuspensionPivot
-		
-		suspensionDistance = 0.12
+		maximumLoad = 30.0
+		suspensionDistance = 0.2
 		suspensionOffset = 0.0
-		targetPosition = 0.0			
-		springRatio = 12
-		damperRatio = 2.0
+		targetPosition = 0.0		// 0-1 scalar - determines the 'at rest' position of the wheel along the suspension travel	
+		springRatio = 14
+		damperRatio = 1.0
+		// boostRatio = 0.65
 	}
 	MODULE
 	{
@@ -236,8 +237,8 @@
 		name = ModuleWheelDamage
 		baseModuleIndex = 0
 		
-		stressTolerance = 5600
-		impactTolerance = 2000
+		stressTolerance = 9000
+		impactTolerance = 3000
 		deflectionMagnitude = 10
 		deflectionSharpness = 2.0
 		slipMagnitude = 15
