--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
@@ -51,4 +51,61 @@
 		dragAtMaxAoA = 0.3
 		dragAtMinAoA = 0.04
 	}	
+	MODULE
+	{
+		name = ModulePartVariants
+		useMultipleDragCubes = false
+		primaryColor = #000000
+		secondaryColor = #ffffff		
+		baseDisplayName = #autoLOC_8007120
+		baseThemeName = BlackAndWhite
+		VARIANT
+		{
+			name = BlackAndWhite
+			displayName = BlackAndWhite
+			themeName = BlackAndWhite
+			primaryColor = #000000
+			secondaryColor = #ffffff
+			
+			GAMEOBJECTS
+			{
+				Wings1_black = true
+				Wings2_black = false
+				Wings1_white = false
+				Wings2_white = true		
+			}
+		}		
+		VARIANT
+		{
+			name = Dark
+			displayName = WhiteAndBlack
+			themeName = Dark
+			primaryColor = #ffffff
+			secondaryColor = #000000
+			
+			GAMEOBJECTS
+			{
+				Wings1_black = false
+				Wings2_black = true
+				Wings1_white = true
+				Wings2_white = false		
+			}
+		}
+		VARIANT
+		{
+			name = White
+			displayName = #autoLOC_8007119
+			themeName = White
+			primaryColor = #ffffff
+			secondaryColor = #ffffff
+			
+			GAMEOBJECTS
+			{
+				Wings1_black = false
+				Wings2_black = false
+				Wings1_white = true
+				Wings2_white = true		
+			}
+		}		
+	}	
 }
