L3S variant + Callisto Shuttle

--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H45.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_H45.cfg
@@ -54,4 +54,22 @@ PART
 		amount = 3520
 		maxAmount = 3520
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Gray
+			displayName = Gray
+			primaryColor = #80807fff
+			TEXTURE
+			{
+				materialName = L3S_H8_H10_L33
+				mainTextureURL = Knes/Parts/Launcher/L3S/L3S_H8_H10_L33_variant
+			}
+		}
+	}		
 }
