--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L140.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L140.cfg
@@ -264,5 +264,23 @@ PART
 		name = Oxidizer
 		amount = 5060
 		maxAmount = 5060
-	}	
+	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Gray
+			displayName = Gray
+			primaryColor = #80807fff
+			TEXTURE
+			{
+				materialName = L3S_L140
+				mainTextureURL = Knes/Parts/Launcher/L3S/L3S_L140_Variant
+			}
+		}
+	}		
 }
