--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
@@ -35,9 +35,9 @@
 	cost = 12500
 	category = Pods
 	subcategory = 0
-	title = Hermes French Space Shuttle
+	title = Callisto Space Shuttle
 	manufacturer = Knes
-	description = Hermes was a reusable launch system that would have been used to transport three astronauts and moderate-size cargo payloads into low Kerbin orbit (LKO) and back again. In basic concept and operation, the Hermes bears a resemblance to other reusable space vehicles, such as the American Space Shuttle. However, unlike the Space Shuttle, Hermes had no ambition to carry heavy cargoes as this role was to be performed by the unmanned and automated Ariane 5 launcher instead.
+	description = Callisto is a reusable launch vehicle that would have been used to transport Kerbals and moderate-size cargo payloads into low Kerbin orbit (LKO) and back again.
 	attachRules = 1,1,1,1,0
 	bulkheadProfiles = size1
 	mass = 7
@@ -49,7 +49,7 @@
 	maxTemp = 3250
 	skinMaxTemp = 3500
 	vesselType = Plane
-	tags = Hermes knes french shuttle old	
+	tags = Hermes Callisto knes french shuttle old	
 	
 
 // --- internal setup ---
