--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
@@ -40,11 +40,11 @@ PART
 
 	category = Coupling
 	subcategory = 0
-	title = French_Hermes_Crew_Module
+	title = Callisto Crew Module
 	manufacturer = Knes
-	description = French_Hermes_Crew_Module
+	description = This Crew module allow the Callisto shuttle to carry more crew.
 
-	tags = Knes Crew Module Hermes
+	tags = Knes Crew Module Hermes Callisto
 
 	mass = 0.8
 
@@ -59,7 +59,15 @@ PART
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.75
 
-	CrewCapacity = 4
+// --- internal setup ---
+
+	CrewCapacity = 6
+	
+	INTERNAL
+	{
+		name = French_Hermes_Crew_Module_IVA
+		offset = 0.0, 0.0, 0.0
+	}	
 
     MODULE
     {
@@ -97,4 +105,11 @@ PART
             key = 0 1
         }
     }	
+	
+	MODULE
+	{
+		name = ModuleInventoryPart		
+		InventorySlots = 12
+		packedVolumeLimit = 1650
+	}		
 }
