--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Elevon.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Elevon.cfg
@@ -22,9 +22,9 @@
 	cost = 250
 	category = Aero
 	subcategory = 0
-	title = Hermes French Space Shuttle Elevon
+	title = Callisto Space Shuttle Elevon
 	manufacturer = Knes
-	description = small heat resistant elevon for Hermes
+	description = small heat resistant elevon for Callisto
 	attachRules = 0,1,0,1,1
 	mass = 0.05
 	thermalMassModifier = 8.0
@@ -40,7 +40,7 @@
 	explosionPotential = 0.1
 	fuelCrossFeed = True
 	bulkheadProfiles = srf
-	tags = #autoLOC_500216 //#autoLOC_500216 = aero aircraft control (elev plane )rudder shuttle stab
+	tags = knes Callisto Hermes aero aircraft control (elev plane )rudder shuttle stab
 
 	
 	MODULE
