--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_OME_Engine.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_OME_Engine.cfg
@@ -24,9 +24,9 @@ PART
 	cost = 2300
 	category = Engine
 	subcategory = 0
-	title = OME "Callisto" Hermes Monoprop Engine
+	title = Callisto "OME" Monoprop Engine
 	manufacturer = Knes
-	description = Combining high thrust with reasonable efficiency, this engine excels when used as a mid-stage booster for 1.875 Rockets.
+	description = Combining high thrust with reasonable efficiency, this engine excels when used as a Spacecraft engine.
 	attachRules = 1,1,1,1,0
 	mass = 0.9
 	heatConductivity = 0.06 // half default
@@ -41,7 +41,7 @@ PART
 	breakingTorque = 180
 	maxTemp = 3200
 	bulkheadProfiles = size0
-	tags = propuls rocket Knes sustain Hermes L3S Ariane
+	tags = propuls rocket Knes sustain Hermes Callisto monoprop
 
 	MODULE
 	{
