--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
@@ -55,11 +55,11 @@ PART
 
 	category = Coupling
 	subcategory = 0
-	title = French_Hermes_Structural_Dock
+	title = Callisto Structural Dock
 	manufacturer = Knes
-	description = French_Hermes_Structural_Dock
+	description = This Structural Dock allow Docking with payload for the Callisto Shuttle
 
-	tags = Knes Crew Dock Module Hermes
+	tags = Knes Crew Dock Module Hermes Callisto
 
 	mass = 0.25
 
@@ -112,4 +112,10 @@ PART
             key = 0 1
         }
     }	
+	MODULE
+	{
+		name = ModuleInventoryPart	
+		InventorySlots = 3
+		packedVolumeLimit = 180
+	}		
 }
