--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_Fuel_Tanks_1875_H10.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_Fuel_Tanks_1875_H10.cfg
@@ -53,4 +53,22 @@ PART
 		amount = 1034
 		maxAmount = 1034
 	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Gray
+			displayName = Gray
+			primaryColor = #80807fff
+			TEXTURE
+			{
+				materialName = L3S_H8_H10_L33
+				mainTextureURL = Knes/Parts/Launcher/L3S/L3S_H8_H10_L33_variant
+			}
+		}
+	}		
 }
