--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_L220N.cfg
@@ -276,5 +276,22 @@ PART
 		amount = 7425
 		maxAmount = 7425
 	}	
-
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Gray
+			displayName = Gray
+			primaryColor = #80807fff
+			TEXTURE
+			{
+				materialName = L3S_L140
+				mainTextureURL = Knes/Parts/Launcher/L3S/L3S_L140_Variant
+			}
+		}
+	}	
 }
