--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_P120C.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_P120C.cfg
@@ -164,5 +164,23 @@ RESOURCE
 		jettisonedObjectMass = 0.1
 		jettisonForce = 0
 		jettisonDirection = 0 0 1
+	}
+	MODULE
+	{
+		name = ModulePartVariants
+		primaryColor = #ffffff
+		baseDisplayName = White
+		baseThemeName = White
+		VARIANT
+		{
+			name = Gray
+			displayName = Gray
+			primaryColor = #80807fff
+			TEXTURE
+			{
+				materialName = L3S_H8_H10_L33
+				mainTextureURL = Knes/Parts/Launcher/L3S/L3S_H8_H10_L33_variant
+			}
+		}
 	}		
 }
