--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Adapter_s1875.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Adapter_s1875.cfg
@@ -40,7 +40,7 @@ PART
 	cost = 800
 	category = Coupling
 	subcategory = 0
-	title = Hermes Adapter for 1.875 Rocket
+	title = Callisto Adapter for 1.875 Rocket
 	manufacturer = Knes
 	description = A good Adapter for 1.875 scale.
 	attachRules = 1,0,1,1,0
@@ -54,7 +54,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000 // = 2900
 	bulkheadProfiles = size1, size1p5
-	tags = Knes cone rockomax	
+	tags = Knes cone rockomax Callisto	
 
 	MODULE
 	{
