--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
@@ -23,9 +23,9 @@
 	cost = 1500
 	category = Aero
 	subcategory = 0
-	title = Hermes French Space Shuttle Rudder
+	title = Callisto Space Shuttle Rudder
 	manufacturer = Knes
-	description = Large heat resistant spaceplane fin for Hermes
+	description = Large heat resistant spaceplane fin for Callisto
 	attachRules = 0,1,0,1,1
 	mass = 0.45
 	thermalMassModifier = 8.0
@@ -41,7 +41,7 @@
 	explosionPotential = 0.1
 	fuelCrossFeed = True
 	bulkheadProfiles = srf
-	tags = #autoLOC_500216 //#autoLOC_500216 = aero aircraft control (elev plane )rudder shuttle stab
+	tags = Callisto Knes aero aircraft control (elev plane )rudder shuttle stab
 
     MODULE
 	{
