--- a/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
@@ -268,5 +268,10 @@ PART
 				_Shininess = 0.7
 			}			
 		}		
-	}	
+	}
+		MODULE
+		{
+			name = ModuleInventoryPart
+			InventorySlots = 6
+		}	
 }
