--- a/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
@@ -214,5 +214,10 @@ PART
 				mainTextureURL = Knes/Parts/Spacecraft/Crew_Pod_09375_Black
 			}
 		}
-	}	
+	}
+		MODULE
+		{
+			name = ModuleInventoryPart
+			InventorySlots = 2
+		}	
 }
