--- a/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
+++ b/GameData/Knes/Compatibility/Kerbal Inventory System (KIS)/Knes_KIS.cfg
@@ -25,6 +25,32 @@
 		
 	}
 	
+	@PART[_Knes_French_Hermes]:NEEDS[KIS]
+	{
+		%MODULE[ModuleKISInventory]	
+		{
+			name = ModuleKISInventory
+			maxVolume = 1000
+			externalAccess = true
+			internalAccess = true
+			slotsX = 4
+			slotsY = 4
+			slotSize = 50
+			itemIconResolution = 128
+			selfIconResolution = 128
+			openSndPath = KIS/Sounds/containerOpen
+			closeSndPath = KIS/Sounds/containerClose
+			defaultMoveSndPath = KIS/Sounds/itemMove
+		}
+		
+		%MODULE[ModuleKISItem]
+		{
+			volumeOverride = 4000
+			editorItemsCategory = false
+		}	
+		
+	}	
+	
 	@PART[Knes_Command_K-IXV]:NEEDS[KIS]
 	{
 		%MODULE[ModuleKISInventory]	
