--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
@@ -232,5 +232,10 @@ PART
 		name = Ablator
 		amount = 100
 		maxAmount = 100
-	}	
+	}
+		MODULE
+		{
+			name = ModuleInventoryPart
+			InventorySlots = 4
+		}	
 }
