Module cargo item on many parts

--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Antenna.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Antenna.cfg
@@ -71,5 +71,10 @@ PART
 		antennaCombinable = True
 		antennaCombinableExponent = 1
 	}
-	
+	MODULE
+	{
+		name = ModuleCargoPart
+		stackableQuantity = 4
+		packedVolume = 1
+	}	
 }
