--- a/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
+++ b/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
@@ -89,5 +89,11 @@ PART
 				mainTextureURL = Knes/Parts/Core/Antenna/Knes_antenna_Black
 			}
 		}
-	}	
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		stackableQuantity = 4
+		packedVolume = 1
+	}
 }
