--- a/GameData/Knes/Parts/Core/Parachute/_Knes_Paraglider_Steerable_srf.cfg
+++ b/GameData/Knes/Parts/Core/Parachute/_Knes_Paraglider_Steerable_srf.cfg
@@ -103,5 +103,10 @@ PART:NEEDS[RetractableLiftingSurface]
 				mainTextureURL = Knes/Parts/Core/Parachute/Paraglider_box_Black
 			}
 		}
+	}	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 5
 	}		
 }
