--- a/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
@@ -128,5 +128,9 @@ PART
 		antennaCombinable = True
 		antennaCombinableExponent = 1
 	}
-
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 5
+	}
 }
