--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
@@ -69,5 +69,10 @@ PART
 				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_4_Black
 			}		
 		}
-	}		
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 5
+	}	
 }
