--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_RCS_3way.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_RCS_3way.cfg
@@ -95,5 +95,10 @@ PART
 		name = MonoPropellant
 		amount = 10
 		maxAmount = 10
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 4
 	}	
 }
