--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
@@ -53,4 +53,10 @@ PART
 //		dragAtMaxAoA = 0.05
 //		dragAtMinAoA = 0.00
 	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		stackableQuantity = 4
+		packedVolume = 2
+	}	
 }
