--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Decoupler_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Decoupler_03125.cfg
@@ -66,4 +66,10 @@ PART
 		toggleEditor = true
 		toggleFlight = true
 	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		stackableQuantity = 4
+		packedVolume = 2
+	}
 }
