--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
@@ -59,5 +59,10 @@ PART
 		uncasedTemp = 1800
 		casedTemp = 3000
 	}
-
+	MODULE
+	{
+		name = ModuleCargoPart
+		stackableQuantity = 4
+		packedVolume = 3
+	}
 }
