--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
@@ -81,5 +81,10 @@ PART
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
 		dragModifier = 10
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 6
 	}	
 }
