--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM.cfg
@@ -140,5 +140,10 @@ tags = ISS CxA CBM docking MRK enhanced Knes
 				Cover = True				
 			}		
 		}		
+	}	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 5
 	}		
 }
