--- a/GameData/Knes/Parts/Spacecraft/_Knes_DockingPortJr_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_DockingPortJr_0625.cfg
@@ -170,5 +170,9 @@ PART
             rotatorsName = Arm16
         }
     }	
-	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 10
+	}		
 }
