--- a/GameData/Knes/Parts/Core/Sat/_Knes_Sat_NanoSat.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Sat_NanoSat.cfg
@@ -155,5 +155,11 @@ PART
 		extendActionName = #autoLOC_6001805 //#autoLOC_6001805 = Extend <<1>>
 		retractActionName = #autoLOC_6001806 //#autoLOC_6001806 = Retract <<1>>
 		extendpanelsActionName = #autoLOC_6001807 //#autoLOC_6001807 = Toggle <<1>>
-	}		
+	}	
+	MODULE
+	{
+		name = ModuleCargoPart
+		stackableQuantity = 4
+		packedVolume = 2
+	}	
 }
