--- a/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Starlette.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Starlette.cfg
@@ -96,4 +96,9 @@ PART
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 3
+	}	
 }
