--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Booster_P03.cfg
@@ -225,5 +225,10 @@ PART
 				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_6_Black
 			}
 		}
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 8
 	}	
 }
