--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_roll.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_roll.cfg
@@ -115,5 +115,10 @@ PART
 				mainTextureURL = Knes/Parts/Launcher/Diamant/Diamant_generic_4_Black
 			}		
 		}
-	}		
+	}	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 5
+	}	
 }
