--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Separatron.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Separatron.cfg
@@ -236,5 +236,10 @@ PART
             key = 0 0
             key = 1 1
         }
-    }		
+    }	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 5
+	}		
 }
