--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
@@ -53,4 +53,10 @@ PART
 //		dragAtMaxAoA = 0.10
 //		dragAtMinAoA = 0.00
 	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		stackableQuantity = 4
+		packedVolume = 2
+	}	
 }
