--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Antenna.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Antenna.cfg
@@ -60,4 +60,9 @@ PART
 		antennaCombinable = True
 		antennaCombinableExponent = 1
 	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 5
+	}	
 }
