--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM_Active.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM_Active.cfg
@@ -133,5 +133,10 @@ tags = ISS CxA CBM docking MRK enhanced Knes
 				Cover = True				
 			}		
 		}		
-	}			
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 5
+	}		
 }
