--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel_Pyld_Track.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel_Pyld_Track.cfg
@@ -50,4 +50,9 @@ MODULE
 	retractActionName = #autoLOC_6001806 //#autoLOC_6001806 = Retract <<1>>
 	extendpanelsActionName = #autoLOC_6001807 //#autoLOC_6001807 = Toggle <<1>>	
 }
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 10
+	}	
 }
