--- a/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_Engine_srf.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_Engine_srf.cfg
@@ -153,5 +153,10 @@ PART
             key = 0 0
             key = 1 1
         }
-    }		
+    }
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 10
+	}		
 }
