--- a/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
@@ -53,5 +53,10 @@ PART
 				mainTextureURL = Knes/Parts/Spacecraft/EndCap_0625_Black
 			}
 		}
-	}	
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 4
+	}		
 }
