--- a/GameData/Knes/Parts/Spacecraft/_Knes_Structural_Node_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Structural_Node_0625.cfg
@@ -93,5 +93,10 @@ PART
 				mainTextureURL = Knes/Parts/Spacecraft/EndCap_0625_Black
 			}
 		}
-	}	
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 10
+	}		
 }
