--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
@@ -30,7 +30,7 @@
 	node_stack_bay1   = 0.0,  2.04783,  0.0,   0.0, -1.0,  0.0, 1
 	node_stack_bay2   = 0.0, -1.32345,  0.0,   0.0,  1.0,  0.0, 1	
 	
-	TechRequired = highAltitudeFlight
+	TechRequired = supersonicFlight
 	entryCost = 24000
 	cost = 12500
 	category = Pods
