--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_OME_Engine.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_OME_Engine.cfg
@@ -19,7 +19,7 @@ PART
 	node_stack_top = 0.0, -0.043655, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom = 0.0, -0.961135, 0.0, 0.0, -1.0, 0.0, 0	
 	
-	TechRequired = advRocketry
+	TechRequired = supersonicFlight
 	entryCost = 8000
 	cost = 2300
 	category = Engine
