--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
@@ -49,7 +49,7 @@ PART
 
 	attachRules = 1,1,1,1,0
 
-	TechRequired = aerodynamicSystems
+	TechRequired = supersonicFlight
 	entryCost = 1200
 	cost = 700
 
