--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Elevon.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Elevon.cfg
@@ -17,7 +17,7 @@
 	CoLOffset = 0, -0.3296936, 0
 	CoPOffset = 0, -0.3296936, 0
 	
-	TechRequired = experimentalAerodynamics
+	TechRequired = supersonicFlight
 	entryCost = 5000
 	cost = 250
 	category = Aero
