--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
@@ -18,7 +18,7 @@
 	
     node_attach = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0
 	
-	TechRequired = experimentalAerodynamics
+	TechRequired = supersonicFlight
 	entryCost = 5000
 	cost = 1500
 	category = Aero
