--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
@@ -38,7 +38,7 @@ PART
 	entryCost = 1200
 	cost = 1500
 
-	category = Coupling
+	category = Utility
 	subcategory = 0
 	title = Callisto Crew Module
 	manufacturer = Knes
