--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
@@ -53,7 +53,7 @@ PART
 	entryCost = 1200
 	cost = 500
 
-	category = Coupling
+	category = Structural
 	subcategory = 0
 	title = Callisto Structural Dock
 	manufacturer = Knes
