Adding TweakScale support for French Hermes

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-SpacePlane_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-SpacePlane_TweakScale.cfg
@@ -111,3 +111,99 @@
 	}
 }
 
+
+// ** French Hermes **
+
+// ** Aero **
+
+@PART[_Knes_French_Hermes_Elevon]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Elevon
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[_Knes_French_Hermes_Rudder]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Rudder
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[_Knes_French_Hermes_Wings]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle Wings
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+// ** Coupling **
+
+@PART[_Knes_French_Hermes_Adapter_s1875]:NEEDS[TweakScale]:FOR[Knes] // Callisto Adapter for 1.875 Rocket
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+// ** Engine **
+
+@PART[_French_Hermes_OME_Engine]:NEEDS[TweakScale]:FOR[Knes] // Callisto "OME" Monoprop Engine
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+// ** Pods **
+
+@PART[_Knes_French_Hermes]:NEEDS[TweakScale]:FOR[Knes] // Callisto Space Shuttle
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 1.25
+	}
+}
+
+// ** Structural **
+
+@PART[_Knes_French_Hermes_Structural_Dock]:NEEDS[TweakScale]:FOR[Knes] // Callisto Structural Dock
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.25
+	}
+}
+
+// ** Utility **
+
+@PART[_Knes_French_Hermes_Docking_Module]:NEEDS[TweakScale]:FOR[Knes] // Callisto Docking Module
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square     // It have crew!
+		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_French_Hermes_Crew_Module]:NEEDS[TweakScale]:FOR[Knes] // Callisto Crew Module
+{
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 1.25
+	}
+}
+
+
