Reduce Torque Value on Abort Motor

--- a/GameData/Knes/Parts/Core/Adapters/_Knes_Utility_SafeSystem_1875.cfg
+++ b/GameData/Knes/Parts/Core/Adapters/_Knes_Utility_SafeSystem_1875.cfg
@@ -56,14 +56,14 @@ PART
 	MODULE
 	{
 		name = ModuleReactionWheel
-		actionGUIName = #autoLOC_502014 //#autoLOC_502014 = Toggle RW
-		PitchTorque = 100
-		YawTorque = 100
-		RollTorque = 80
+		PitchTorque = 20
+		YawTorque = 20
+		RollTorque = 10
+		torqueResponseSpeed = 2
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 0.1
+			rate = 0.4
 		}
 	}
 	
