--- a/GameData/Knes/Parts/Core/Adapters/_Knes_Utility_SafeSystem_250.cfg
+++ b/GameData/Knes/Parts/Core/Adapters/_Knes_Utility_SafeSystem_250.cfg
@@ -55,14 +55,14 @@ PART
 	MODULE
 	{
 		name = ModuleReactionWheel
-		actionGUIName = #autoLOC_502014 //#autoLOC_502014 = Toggle RW
-		PitchTorque = 3540
-		YawTorque = 3540
-		RollTorque = 1220
+		PitchTorque = 30
+		YawTorque = 30
+		RollTorque = 10
+		torqueResponseSpeed = 2
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 0.1
+			rate = 0.4
 		}
 	}
 	
