Add missing breaking force/torque value

--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
@@ -49,6 +49,8 @@
 	maxTemp = 3250
 	skinMaxTemp = 3500
 	vesselType = Plane
+	breakingForce = 200
+	breakingTorque = 200	
 	tags = Hermes Callisto knes french shuttle old	
 	
 
