--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
@@ -58,6 +58,8 @@ PART
 	heatConductivity = 0.05
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.75
+	breakingForce = 200
+	breakingTorque = 200	
 
 // --- internal setup ---
 
