--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Elevon.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Elevon.cfg
@@ -41,7 +41,8 @@
 	fuelCrossFeed = True
 	bulkheadProfiles = srf
 	tags = knes Callisto Hermes aero aircraft control (elev plane )rudder shuttle stab
-
+	breakingForce = 200
+	breakingTorque = 200
 	
 	MODULE
 	{
