--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
@@ -41,7 +41,10 @@
 	explosionPotential = 0.1
 	fuelCrossFeed = True
 	bulkheadProfiles = srf
+	breakingForce = 200
+	breakingTorque = 200	
 	tags = Callisto Knes aero aircraft control (elev plane )rudder shuttle stab
+
 
     MODULE
 	{
