--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
@@ -68,7 +68,8 @@ PART
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 55
-
+	breakingForce = 200
+	breakingTorque = 200
 	maxTemp = 2400
 	heatConductivity = 0.05
 	skinInternalConductionMult = 4.0
