--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
@@ -41,6 +41,8 @@
 	explosionPotential = 0.1
 	fuelCrossFeed = True
 	bulkheadProfiles = srf
+	breakingForce = 200
+	breakingTorque = 200	
 	tags = Callisto knes Hermes aero aircraft control (elev plane )rudder shuttle stab
 
 	MODULE
