Move Cargo Part to Cargo category

--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Cargo.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Cargo.cfg
@@ -33,7 +33,7 @@ PART
 	TechRequired = commandModules
 	entryCost = 5500
 	cost = 1850
-	category = Utility
+	category = Cargo
 	subcategory = 0
 	title = ATV "Amaldi" Pressurised Module
 	manufacturer = Knes
@@ -99,21 +99,22 @@ PART
 	
 	// --- Resources ---
 
-	RESOURCE
-	{
-		name = MonoPropellant
-		amount = 250
-		maxAmount = 250
-	}
-	RESOURCE
-	{
-		name = ElectricCharge
-		amount = 250
-		maxAmount = 250
-	}
+		RESOURCE
+		{
+			name = MonoPropellant
+			amount = 250
+			maxAmount = 250
+		}
+		RESOURCE
+		{
+			name = ElectricCharge
+			amount = 250
+			maxAmount = 250
+		}
 		MODULE
 		{
 			name = ModuleInventoryPart
-			InventorySlots = 9
+			InventorySlots = 12
+			packedVolumeLimit = 2500			
 		}
 }
