--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_125_cargo.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_125_cargo.cfg
@@ -33,7 +33,7 @@ PART
 	TechRequired = start
 	entryCost = 1500
 	cost = 250
-	category = Utility
+	category = Cargo
 	subcategory = 0
 	title = Small "MiraGino" Pressurised Module
 	manufacturer = Knes
@@ -93,11 +93,10 @@ PART
 	
 	// --- Resources ---
 
-	RESOURCE
+	MODULE
 	{
-		name = Ore
-		amount = 0
-		maxAmount = 150
-	}
-
+		name = ModuleInventoryPart	
+		InventorySlots = 9
+		packedVolumeLimit = 800
+	}	
 }
