--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Cargo.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Cargo.cfg
@@ -47,7 +47,7 @@ PART
 	TechRequired = spaceExploration
 	entryCost = 1800
 	cost = 254000
-	category = Pods
+	category = Cargo
 	subcategory = 0
 	title = Multi-Role Cargo Kapsule DM
 	manufacturer = Knes
@@ -344,5 +344,11 @@ PART
 		name = Crystal
 		amount = 0
 		maxAmount = 2500
-	}	
+	}
+	MODULE
+	{
+		name = ModuleInventoryPart		
+		InventorySlots = 9
+		packedVolumeLimit = 650
+	}		
 }
