--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes.cfg
@@ -362,6 +362,7 @@
 		MODULE
 		{
 			name = ModuleInventoryPart
-			InventorySlots = 9
-		}	
+			InventorySlots = 12
+			packedVolumeLimit = 2500			
+		}
 }
