--- a/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
@@ -39,7 +39,7 @@ PART
 	entryCost = 1200
 	cost = 50800
 
-    category     = Pods
+    category     = Cargo
     subcategory  = 0
     title        = Cargo Pod "Minotaur"
     manufacturer = Knes
@@ -182,13 +182,6 @@ PART
 	
 	RESOURCE
 	{
-		name = Ore
-		amount = 0
-		maxAmount = 50
-	}	
-	
-	RESOURCE
-	{
 		name = Crystal
 		amount = 0
 		maxAmount = 500
@@ -216,9 +209,11 @@ PART
 			}
 		}
 	}
-		MODULE
-		{
-			name = ModuleInventoryPart
-			InventorySlots = 2
-		}	
+	MODULE
+	{
+		name = ModuleInventoryPart	
+		InventorySlots = 4
+		packedVolumeLimit = 100
+	}	
+		
 }
