--- a/GameData/Knes/Agencies/Agents.cfg
+++ b/GameData/Knes/Agencies/Agents.cfg
@@ -5,7 +5,7 @@ AGENT
   title = Knes
   description = Knes ... we helps Kerbals moves
   
-  logoURL = Knes/FlagsOrganization/Knes
+  logoURL = Knes/FlagsAgency/Knes
   logoScaledURL = Knes/Agencies/Knes_scaled
   
   // mentality
