ModuleCargo Parts update

--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hera_Grapple.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hera_Grapple.cfg
@@ -63,5 +63,9 @@ PART
 		endEventGUIName = #autoLOC_502074 //#autoLOC_502074 = Disarm
 		actionGUIName = #autoLOC_502075 //#autoLOC_502075 = Toggle Arming
 	}
-	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 1000
+	}	
 }
