--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Structural_Dock.cfg
@@ -122,5 +122,10 @@ PART
 		name = ModuleInventoryPart	
 		InventorySlots = 3
 		packedVolumeLimit = 180
-	}		
+	}	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 2000
+	}	
 }
