--- a/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Cargo_Pod_09375.cfg
@@ -215,5 +215,9 @@ PART
 		InventorySlots = 4
 		packedVolumeLimit = 100
 	}	
-		
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 550
+	}			
 }
