--- a/GameData/Knes/Parts/Spacecraft/_Knes_EscapeTower_Small.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_EscapeTower_Small.cfg
@@ -156,5 +156,10 @@ PART
 				mainTextureURL = Knes/Parts/Spacecraft/Viking_Service_Module_09375_Black
 			}
 		}
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 80
 	}	
 }
