--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_Hab.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_Hab.cfg
@@ -171,5 +171,10 @@ PART
 				mainTextureURL = Knes/Parts/Spacecraft/Station_Module_Hab_Black
 			}
 		}
+	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 2500
 	}		
 }
