--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_AileronR.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_AileronR.cfg
@@ -54,4 +54,9 @@ PART
 		actuatorSpeed = 25
 		transformName = Hermes_AileronR_Parent
 	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 250
+	}		
 }
