--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_RudderR.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_RudderR.cfg
@@ -62,4 +62,9 @@ PART
 		actuatorSpeed = 25
 		transformName = Hermes_RudderR
 	}
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 250
+	}		
 }
