--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_0625.cfg
@@ -110,5 +110,10 @@ PART
 				mainTextureURL = Knes/Parts/Spacecraft/Station_Module_Hab_Black
 			}
 		}
-	}		
+	}	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 10
+	}	
 }
