--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_EndCap_09375.cfg
@@ -111,5 +111,10 @@ PART
 				mainTextureURL = Knes/Parts/Spacecraft/Station_Module_Hab_Black
 			}
 		}
-	}		
+	}	
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 20
+	}	
 }
